# pressure-estimator

./: .gitignore  README.md  environment-gpu.yml  environment.yml  main.py  pyproject.toml  requirements.txt  sample_input.json  weblog.md
archive/frontend/: index.html  jsconfig.json  sketch.js  style.css
archive/frontend/assets/data/: layers.json  layouts.json  layouts_bk.json  scenes.json  tilesets.json
archive/frontend/components/: Debug.js  Hunter.js  Math.js  Pathfinding.js  Player.js  RigidBody.js  SceneManager.js  UI.js  World.js
docs/: Notes.md
pressure_estimator.egg-info/: PKG-INFO  SOURCES.txt
src/data-analyze/: diagnostics.py  map_analysis.py  plots.py  processor.py  route_training.py  run_analysis.py
src/pressure_estimator/: __init__.py  cli.py  estimator.py  input.py
src/pressure_estimator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pseudoden_research/: __init__.py  analysis.py  app.py  behavior.py  config.py  entities.py  geometry.py  maps.py  simulation.py  strategies.py  telemetry.py  tuning.py  world.py
tests/: test_research_core.py
