[project]
name = "pressure-estimator"
version = "0.1.0"
description = "A lightweight pressure estimation toolkit for Tetris-like games."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pydantic",
  "typer"
]

[project.optional-dependencies]
cpu = [
  "onnxruntime"
]
gpu = [
  "onnxruntime-gpu"
]

[project.scripts]
pressure = "pressure_estimator.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
